fixed overlapped year in about section

--- a/css/custom.css
+++ b/css/custom.css
@@ -700,6 +700,10 @@ header {
 	color:#1ABC9C;
 }
 
+
+.date.year{
+	text-align: left;
+}
 /* SKILLS */
 
 #skills {
